--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://timotejvas.github.io/youtube_clone",
+  "homepage": "https://timotejvas.github.io/youtube_app",
   "name": "youtube_clone",
   "version": "1.0.0",
   "private": true,
